--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Resturant terrace</h2>
+                <h2 class="card__title">Restaurant terrace</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
