--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header class="header">
         <img src="./images/logo.svg" alt="Spot Logo" class="header__logo" />
       </header>
-      <main class="content">
+      <main class="page__content">
         <section class="profile page__section">
           <img
             src="./images/avatar.jpg"
@@ -29,21 +29,10 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img
-                src="./images/pencil.svg"
-                alt="pencil icon"
-                class="profile__pencil"
-              />Edit Profile
+              Edit Profile
             </button>
           </div>
-
-          <button type="button" class="profile__add-btn">
-            <img
-              src="./images/plus.svg"
-              alt="plus icon"
-              class="profile__plus"
-            />New Post
-          </button>
+          <button type="button" class="profile__add-btn">New Post</button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
@@ -119,9 +108,7 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__content">
-          <p class="footer__copyright">2024 &copy; Spots</p>
-        </div>
+        <p class="footer__copyright">2024 &copy; Spots</p>
       </footer>
     </div>
   </body>
