--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">
-                  A very long bridge, over the forest...
+                  A very long bridge, over the forest and through the trees
                 </h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
@@ -111,5 +111,6 @@
         <p class="footer__copyright">2024 &copy; Spots</p>
       </footer>
     </div>
+    <script defer src="./scripts/index.js"></script>
   </body>
 </html>
