--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <template id="card-template"
               ><li class="card">
                 <img src="" alt="" class="card__image" />
+                <button class="card__delete-btn" type="button"></button>
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button type="button" class="card__like-btn"></button>
@@ -51,34 +52,79 @@
       <footer class="footer">
         <p class="footer__copyright">2024 &copy; Spots</p>
       </footer>
-      <div class="modal" id="edit-modal">
-        <div class="modal__container">
-          <button type="submit" class="modal__close-btn"></button>
-          <h2 class="modal__title">Edit profile</h2>
-          <form name="edit-profile" class="modal__form">
-            <label for="profile-name-input" class="modal__label">
-              Name
-              <input
-                id="profile-name-input"
-                type="text"
-                class="modal__input"
-                placeholder="Type your name"
-              />
-            </label>
-            <label for="profile-description-input" class="modal__label">
-              Description
-              <input
-                id="profile-description-input"
-                type="text"
-                class="modal__input"
-                placeholder="Describe yourself"
-              />
-            </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
-          </form>
-        </div>
+    </div>
+    <div class="modal" id="edit-modal">
+      <div class="modal__container">
+        <button type="submit" class="modal__close-btn"></button>
+        <h2 class="modal__title">Edit profile</h2>
+        <form name="edit-profile" class="modal__form">
+          <label for="profile-name-input" class="modal__label">
+            Name
+            <input
+              id="profile-name-input"
+              type="text"
+              class="modal__input"
+              name="name"
+              placeholder="Type your name"
+            />
+          </label>
+          <label for="profile-description-input" class="modal__label">
+            Description
+            <input
+              id="profile-description-input"
+              type="text"
+              class="modal__input"
+              name="description"
+              placeholder="Describe yourself"
+            />
+          </label>
+          <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
       </div>
     </div>
+
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button type="submit" class="modal__close-btn"></button>
+        <h2 class="modal__title">New Post</h2>
+        <form name="edit-profile" class="modal__form" id="add-card-form">
+          <label for="add-card-link-input" class="modal__label">
+            Image Link
+            <input
+              id="add-card-link-input"
+              type="url"
+              class="modal__input"
+              name="link"
+              placeholder="Paste a link to the picture"
+            />
+          </label>
+          <label for="add-card-name-input" class="modal__label">
+            Caption
+            <input
+              id="add-card-name-input"
+              type="text"
+              class="modal__input"
+              name="name"
+              placeholder="Type your caption"
+            />
+          </label>
+          <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="modal modal_opened" id="preview-modal">
+      <div class="modal__content">
+        <button type="submit" class="modal__close-btn"></button>
+        <img
+          class="modal__image"
+          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/6-photo-by-moritz-feldmann-from-pexels.jpg"
+          alt=""
+        />
+        <p class="modal__caption">Val Thorens</p>
+      </div>
+    </div>
+
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
