--- a/index.html
+++ b/index.html
@@ -113,15 +113,14 @@
       </div>
     </div>
 
-    <div class="modal modal_opened" id="preview-modal">
-      <div class="modal__content">
-        <button type="submit" class="modal__close-btn"></button>
-        <img
-          class="modal__image"
-          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/6-photo-by-moritz-feldmann-from-pexels.jpg"
-          alt=""
-        />
-        <p class="modal__caption">Val Thorens</p>
+    <div class="modal" id="preview-modal">
+      <div class="modal__container modal__container_type_preview">
+        <button
+          type="submit"
+          class="modal__close-btn modal__close-btn_type_preview"
+        ></button>
+        <img class="modal__image" src="" alt="" />
+        <p class="modal__caption"></p>
       </div>
     </div>
 
