--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="modal__container">
         <button type="submit" class="modal__close-btn"></button>
         <h2 class="modal__title">Edit profile</h2>
-        <form name="edit-profile" class="modal__form">
+        <form name="edit-profile" class="modal__form" novalidate>
           <label for="profile-name-input" class="modal__label">
             Name
             <input
@@ -66,7 +66,11 @@
               class="modal__input"
               name="name"
               placeholder="Type your name"
+              required
+              minlength="2"
+              maxlength="40"
             />
+            <span id="profile-name-input-error" class="modal__error"></span>
           </label>
           <label for="profile-description-input" class="modal__label">
             Description
@@ -76,7 +80,14 @@
               class="modal__input"
               name="description"
               placeholder="Describe yourself"
+              required
+              minlength="2"
+              maxlength="200"
             />
+            <span
+              id="profile-description-input-error"
+              class="modal__error"
+            ></span>
           </label>
           <button type="submit" class="modal__submit-btn">Save</button>
         </form>
@@ -87,7 +98,12 @@
       <div class="modal__container">
         <button type="submit" class="modal__close-btn"></button>
         <h2 class="modal__title">New Post</h2>
-        <form name="edit-profile" class="modal__form" id="add-card-form">
+        <form
+          name="edit-profile"
+          class="modal__form"
+          id="add-card-form"
+          novalidate
+        >
           <label for="add-card-link-input" class="modal__label">
             Image Link
             <input
@@ -96,7 +112,9 @@
               class="modal__input"
               name="link"
               placeholder="Paste a link to the picture"
+              required
             />
+            <span id="add-card-link-input-error" class="modal__error"></span>
           </label>
           <label for="add-card-name-input" class="modal__label">
             Caption
@@ -106,7 +124,11 @@
               class="modal__input"
               name="name"
               placeholder="Type your caption"
+              required
+              minlength="2"
+              maxlength="30"
             />
+            <span id="add-card-name-input-error" class="modal__error"></span>
           </label>
           <button type="submit" class="modal__submit-btn">Save</button>
         </form>
@@ -123,7 +145,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
-
+    <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
